# wakemypc-cli

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/pico_cli/: flash.py  identify.py  main.py  provision.py  register.py  restart.py  serial_detect.py  upload.py
src/wakemypc/: main.py  provision.py  register.py  serial_detect.py  upload.py
