[project]
name = "wakemypc"
version = "1.2.1"
description = "Companion CLI for https://wakemypc.com (WakeMyPC) -- flash, provision, and manage Pico W transmitters from your terminal. WakeMyPC is a website that lets you turn on you PC remotely from anywhere in the world using Wake-on-Lan."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "wakemypc.com contributors" },
]
keywords = ["wake-on-lan", "wakemypc", "raspberry-pi-pico", "iot", "homelab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.0",
    "pyserial>=3.5",
    "requests>=2.28",
    "mpremote>=1.22",
]

[project.scripts]
wakemypc = "wakemypc.main:cli"

[project.urls]
Homepage = "https://wakemypc.com"
Repository = "https://github.com/vipulksh/wakemypc-cli"
Issues = "https://github.com/vipulksh/wakemypc-cli/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
